--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,12 +6,11 @@ header {
     padding-left: 20px;
     padding-right: 20px;
     color: #514ef3;
-    border-bottom: 2px solid #c7c6c6;
 }
 
 .header-left{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
 }
 
@@ -35,6 +34,7 @@ header {
     width: 60px;
     position: relative;
     cursor: pointer;
+    border-radius: 50%;
 }
 
 .dropdown-trigger img {
