--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 /* Sidebar */
 .sidebar {
-    width: 200px;
+    width: 280px;
     color: black;
     padding: 20px;
     padding-top: 0px;
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: space-between;
     border-right: 2px solid #e4e4e4;
     background-color: #F7F7F7;
 }
@@ -33,8 +33,7 @@
 aside ul{
     list-style: none;
     padding: 0;
-    width: 200px;
-    height: 80vh;
+    width: 240px;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -92,6 +91,39 @@ aside li:hover a{
     background-color: #FFFFFF;
 }
 
+.sidebar-footer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 10px;
+    height: 50px;
+    margin-bottom: 5px;
+    border-radius: 7px;
+}
+
+.profile-img{
+    min-width: 40px;
+    height: 40px;
+    overflow: hidden;
+}
+
+.profile-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.profile-details{
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.usermail{
+    font-size: 12px;
+    color: #666;
+}
+
 @media only screen and (max-width: 1000px){
 
     .sidebar{
@@ -115,13 +147,22 @@ aside li:hover a{
     .sidebar p{
         display: none;
     }
+
+    .profile-details{
+        display: none;
+    }
+
+    .sidebar-footer{
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 @media only screen and (max-width: 750px) {
     .sidebar{
         height: 100vh;
         background-color: white;
-        width: 220px;
+        width: 250px;
         z-index: 999;
         transition: .3s ease;
         padding: 0;
@@ -170,5 +211,10 @@ aside li:hover a{
     #menu-button{
         height: 40px;
         width: 40px;
+    }
+
+    .profile-details{
+        display: flex;
+        flex-direction: column;
     }
 }
