--- a/src/layouts/PvtLayout.css
+++ b/src/layouts/PvtLayout.css
@@ -1,7 +1,10 @@
 main{
-    width: calc(100% - 200px);
+    width: calc(100% - 280px);
     min-height: 100vh;
-    margin-left: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 280px;
 }
 
 
