--- a/src/components/PublicComponents/herosection.css
+++ b/src/components/PublicComponents/herosection.css
@@ -62,3 +62,29 @@
         font-size: 1.2rem;
     }
 }
+
+@media only screen and (max-width: 550px){
+    .hero-section h1{
+        font-size: 1.8rem;
+    }
+
+    .hero-section h3{
+        width: 100%;
+        font-size: 1rem;
+    }
+
+    .hero-section button{
+        width: 200px;
+        height: 50px;
+        font-size: 14px;
+    }
+
+    .hero-section p{
+        font-size: 0.9rem;
+    }
+
+    .hero-section{
+        height: 50vh;
+        padding-bottom: 0;
+    }
+}
