--- a/src/components/PublicComponents/reusables/WeDoImg.css
+++ b/src/components/PublicComponents/reusables/WeDoImg.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: start;
     justify-content: center;
+    position: relative;
 }
 
 .we-do-img img{
@@ -12,15 +13,34 @@
     height: auto;
     border-radius: 10px;
     object-fit: cover;
-    box-sizing: border-box;
-    display: block;
 }
 
+.we-do-img-title{
+    color: white;
+    display: none;
+    align-items: end;
+    justify-content: start;
+    width: 100%;
+    height: 50%;
+    padding-bottom: 15px;
+    font-size: 25px;
+    font-weight: 600;
+    position: absolute;
+    bottom: 0px;
+    padding-left: 20px;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(17, 17, 17, 0) 100%);
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+}
 
 /* Responsive */
 @media only screen and (max-width: 650px) {
     .we-do-img {
         width: 100%;
         text-align: center;
+    }
+
+    .we-do-img-title{
+    display: flex;
     }
 }
