--- a/src/components/PublicComponents/reusables/WeDoInfo.css
+++ b/src/components/PublicComponents/reusables/WeDoInfo.css
@@ -1,3 +1,4 @@
+
 .we-do-info {
     width: 50%;
     display: flex;
@@ -7,8 +8,10 @@
 }
 
 .we-do-info h2 {
-    font-size: 2rem;
-    font-weight: 700;
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: #333;
 }
 
 .we-do-info p {
@@ -32,6 +35,19 @@
     .we-do-info {
         width: 100%;
         text-align: center;
+    }
+
+    .we-do-info-title{
+        display: none;
+    }
+
+    .we-do-info h2 {
+        font-size: 18px;
+        margin-bottom: 0;
+    }
+
+    .we-do-info p {
+        font-size: 14px;
     }
 }
 
