--- a/src/components/PublicComponents/sleekslider.css
+++ b/src/components/PublicComponents/sleekslider.css
@@ -77,3 +77,21 @@
         transform: translateX(-50%);
     }
 }
+
+@media only screen and (max-width: 750px) {
+    .companies h2{
+        font-size: 24px;
+    }
+
+    .logos-slider img {
+        height: 80px;
+        margin-left: 40px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .companies{
+        padding-bottom: 0;
+    }
+    
+}
