--- a/src/components/PublicComponents/testimonials.css
+++ b/src/components/PublicComponents/testimonials.css
@@ -105,11 +105,73 @@
     }
 }
 
-@media only screen and (max-width: 650px){
-    
+@media only screen and (max-width: 700px){
     .testimonials button{
         transform: translateY(0);
         bottom: 0;
         top: 100%;
+    }
+
+    .review-text{
+        width: 70%;
+    }
+
+    .review-text p{
+        font-size: 20px;
+    }
+
+    .review-person{
+        width: 100%;
+        gap: 5px;
+    }
+
+    .review-person p{
+        font-size: 14px;
+    }
+
+    #next-review{
+        top: 75%;
+        right: 20px;
+        transform: translateY(-0%);
+        border-radius: 7px;
+        color: #007bff;
+        background-color: white;
+        border: 2px solid #007bff;
+    }
+
+
+    #prev-review{
+        top: 75%;
+        left: 20px;
+        transform: translateY(-0%);
+        border-radius: 7px;
+        color: #007bff;
+        background-color: white;
+        border: 2px solid #007bff;
+    }
+}
+
+@media only screen and (max-width: 450px){
+    .review-text p{
+        font-size: 14px;
+    }
+
+    .review-person p{
+        font-size: 10px;
+    }
+
+    .review{
+        min-height: 0;
+        height: 40vh;
+    }
+
+    .reviews-holder{
+        height: 30vh;
+        /* justify-content: center; */
+        /* align-items: center; */
+    }
+
+    .testimonials{
+        height: fit-content;
     }
 }
