--- a/src/components/PublicComponents/whatdo.css
+++ b/src/components/PublicComponents/whatdo.css
@@ -46,18 +46,12 @@
         padding: 20px 0px;
     }
 
-    .we-do-right h2,
-    .we-do-left h2 {
-        font-size: 20px;
-    }
-
-    .we-do-right p,
-    .we-do-left p {
-        font-size: 16px;
-    }
-
     .what-we-do-container h1 {
         font-size: 2rem;
+    }
+
+    .we-do-section {
+        gap: 10px;
     }
 }
 
@@ -72,10 +66,8 @@
         align-items: center;
     }
 
-    .we-do-left,
-    .we-do-right {
-        width: 100%;
-        text-align: center;
+    .we-do-section{
+        position: relative;
     }
 
     .what-we-do-container h1 {
@@ -84,6 +76,10 @@
 
     .what-we-do-container {
         padding: 40px 20px;
+    }
+
+    .what-we-do-container h1{
+        margin-top: 0;
     }
 }
 
