--- a/src/pages/public/auth/login.css
+++ b/src/pages/public/auth/login.css
@@ -7,7 +7,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    min-height: 80vh;
     padding: 0 40px;
     gap: 40px;
 }
