--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,181 +25,6 @@ header {
 }
 
 
-.user-info p{
-    font-size: 0.9rem;
-    color: #666;
-}
-.dropdown-trigger {
-    height: 60px;
-    width: 60px;
-    position: relative;
-    cursor: pointer;
-    border-radius: 50%;
-}
-
-.dropdown-trigger img {
-    height: 60px;
-    width: 60px;
-    object-fit: contain;
-}
-
-.dropdown {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    position: absolute;
-    right: 25px;
-    top: 55px;
-    border: 2px solid rgb(220, 220, 220);
-    height: fit-content;
-    background: #fff;
-    width: 250px;
-    transition: .3s;
-    border-radius: 10px;
-    z-index: 3;
-    transition: opacity .15s ease-out;
-    opacity: 0;
-    height: 0;
-    box-shadow: 5px 5px 14px 4px rgba(0,0,0,0.11);
-    overflow: hidden;
-}
-
-.dropdown-header{
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-    border-bottom: 2px solid #d1d1d1;
-    padding: 10px;
-}
-
-.dropdown-header h3{
-    font-size: 18px;
-    color: #333;
-}
-
-.dropdown-header p{
-    font-size: 12px;
-}
-
-.nav-div{
-    display: flex;
-    flex-direction: column;
-    padding-left: 10px;
-    padding-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    border-bottom:  2px solid #d1d1d1;
-    padding-bottom: 10px;
-}
-
-.nav-div a{
-    text-decoration: none;
-    width: 98%;
-    font-size: 14px;
-    color: #707070;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    gap: 15px;
-    padding: 5px;
-    transition: .2s;
-    border-radius: 5px;
-}
-
-.nav-div a:hover{
-    background-color: #f0f0f0;
-}
-
-.logout{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-}
-
-.logout button{
-    width: 95%;
-    height: 80%;
-    border: none;
-    background-color: white;
-    color: rgb(255, 97, 97);
-    font-weight: 600;
-    display: flex;
-    justify-content: start;
-    border-radius: 7px;
-    align-items: center;
-    padding-left: 10px;
-    gap: 5px;
-}
-
-.logout button:hover{
-    background-color: #f0f0f0;
-}
-
-.logout button i{
-    color: rgb(91, 91, 91);
-}
-
-#settings {
-    background: #514ef3;
-    color: white;
-    font-size: 15px;
-    border-radius: 7px;
-    border: 2px solid transparent;
-    padding: 10px;
-    transition: .3s;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-decoration: none;
-}
-
-#settings:hover {
-    background: #3633ff;
-    cursor: pointer;
-}
-
-#settings img {
-    width: 20px;
-    height: 20px;
-    margin-left: 8px;
-    object-fit: contain;
-}
-
-#logout {
-    padding: 10px;
-    background: rgb(255, 48, 48);
-    color: white;
-    border-radius: 7px;
-    border: 2px solid transparent;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 15px;
-    transition: .3s;
-    cursor: pointer;
-    gap: 8px;
-}
-
-#logout:hover {
-    background: rgb(255, 10, 10);
-}
-
-#logout img {
-    width: 20px;
-    height: 20px;
-    object-fit: contain;
-}
-
-.dropdown-trigger:hover .dropdown,
-.dropdown:hover {
-    opacity: 1;
-    height: auto;
-}
 
 .mobile-section img{
     height: 90px;
@@ -214,7 +39,6 @@ header {
 }
 
 @media only screen and (max-width: 1000px) {
-    
     .header-left image{
         height: 30px;
         width: 30px;
@@ -229,13 +53,20 @@ header {
         height: 40px;
     }
 
+    .header{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 750px) {
+    .header{
+        display: flex;
+    }
+
     .mobile-section{
         display: flex;
     }
-    
+
     .page-name h1{
         display: none;
     }
