--- a/src/layouts/PvtLayout.css
+++ b/src/layouts/PvtLayout.css
@@ -1,12 +1,12 @@
 main{
     width: calc(100% - 280px);
-    min-height: 100vh;
+    min-height: calc(100vh - 60px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-left: 280px;
+    padding: 20px;
 }
-
 
 @media only screen and (max-width: 1000px) {
     main{
