--- a/src/components/PrivateComponents/UserDashboard/Calendar/CalendarHeader.css
+++ b/src/components/PrivateComponents/UserDashboard/Calendar/CalendarHeader.css
@@ -4,7 +4,6 @@
     align-items: center;
     flex-direction: column;
     padding: 10px 20px;
-    background-color: #f5f5f5;
     border-bottom: 1px solid #ddd;
 }
 
@@ -24,6 +23,10 @@
     width: 100%;
     font-weight: bold;
     color: #555;
+}
+
+.change-current h1{
+    font-size: 20px;
 }
 
 .day{
@@ -49,4 +52,17 @@
 #prev-month:hover, #next-month:hover {
     background-color: #007bff;
     color: white;
+}
+
+@media only screen and (max-width: 1200px){
+    .change-current h1{
+        font-size: 16px;
+    }
+
+    #prev-month, #next-month {
+        height: 35px;
+        width: 35px;
+        font-size: 16px;
+    }
+    
 }
