--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import "tailwindcss";
 
+:root {
+    /* App theme color */
+    --theme-color: #514EF3;
+    --border-color: #d1d1d1;
+}
+
 *{
     margin: 0;
     padding: 0;
