--- a/src/components/PrivateComponents/reusables/AddButton/AddButton.css
+++ b/src/components/PrivateComponents/reusables/AddButton/AddButton.css
@@ -8,4 +8,9 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    transition: .3s;
+}
+
+.add-button:hover{
+    background-color: var(--theme-color-hover);
 }
