--- a/src/components/PublicComponents/HomeFooter.css
+++ b/src/components/PublicComponents/HomeFooter.css
@@ -187,4 +187,8 @@
         justify-content: start;
         align-items: start;
     }
+
+    .hero-section{
+        height: fit-content;
+    }
 }
