--- a/src/components/PrivateComponents/UserDashboard/Schedule/Schedule.css
+++ b/src/components/PrivateComponents/UserDashboard/Schedule/Schedule.css
@@ -2,10 +2,12 @@
     width: 100%;
     border: 2px solid var(--border-color);
     border-radius: 12px;
+    display: flex;
+    flex-direction: column;
 }
 
 .schedule-body{
-    height: 350px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -13,4 +15,15 @@
     gap: 20px;
     padding: 20px 0;
     overflow-y: auto;
+}
+
+.appointments-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: 15px;
+    width: 100%;
+    max-height: 500px;
+    overflow: auto;
 }
