--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,8 +1,7 @@
 /* Sidebar */
 .sidebar {
-    width: 280px;
+    width: 240px;
     color: black;
-    padding: 20px;
     padding-top: 0px;
     min-height: 100%;
     position: fixed;
@@ -95,16 +94,15 @@ aside li:hover a{
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     gap: 10px;
-    height: 50px;
-    margin-bottom: 5px;
-    border-radius: 7px;
+    height: 80px;
     position: relative;
     cursor: pointer;
     padding: 5px;
     transition: .3s;
     border: 2px solid transparent;
+    border-top: 2px solid var(--border-color);
 }
 
 .sidebar-footer:hover{
