--- a/src/components/PrivateComponents/reusables/CardLayout/CardLayout.css
+++ b/src/components/PrivateComponents/reusables/CardLayout/CardLayout.css
@@ -1,4 +1,4 @@
-.home-cards-layout{
+.card-layout{
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -6,15 +6,14 @@
     gap: 20px;
 }
 
-.home-card-layout-header{
+.card-layout-header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    justify-content: space-between;
     padding: 10px;
 }
 
-.home-card-layout-header-left{
+.card-layout-header-left{
     display: flex;
     align-items: center;
     gap: 10px;
@@ -22,6 +21,10 @@
     font-weight: 600;
 }
 
-.home-card-layout-header-icon{
+.card-layout-header-icon{
     color: var(--theme-color);
+}
+
+.card-layout-body{
+    display: block;
 }
