--- a/src/components/PrivateComponents/UserDashboard/Todos/TodoList.css
+++ b/src/components/PrivateComponents/UserDashboard/Todos/TodoList.css
@@ -1,12 +1,13 @@
-.notes-list-home-page{
+.todo-list-home-page{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    height: 300px;
     overflow: auto;
+    height: 300px;
+    overflow-y: auto;
 }
 
-.notes-list-home-container{
+.todo-list-home-container{
     display: flex;
     flex-direction: column;
     gap: 15px;
