--- a/src/components/PublicComponents/reusables/WeDoInfo.css
+++ b/src/components/PublicComponents/reusables/WeDoInfo.css
@@ -1,58 +1,58 @@
-
 .we-do-info {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	justify-content: center;
 }
 
 .we-do-info h2 {
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 10px;
-    color: #333;
+	font-size: 24px;
+	font-weight: 600;
+	margin: 0;
+	margin-bottom: 10px;
+	color: #333;
 }
 
 .we-do-info p {
-    font-size: 16px;
-    color: #555;
-    text-align: start;
+	font-size: 16px;
+	color: #555;
+	text-align: start;
 }
 
 /* Responsive */
 @media only screen and (max-width: 950px) {
-    .we-do-info h2 {
-        font-size: 20px;
-    }
+	.we-do-info h2 {
+		font-size: 20px;
+	}
 
-    .we-do-info p {
-        font-size: 16px;
-    }
+	.we-do-info p {
+		font-size: 16px;
+	}
 }
 
 @media only screen and (max-width: 650px) {
-    .we-do-info {
-        width: 100%;
-        text-align: center;
-    }
+	.we-do-info {
+		width: 100%;
+		text-align: center;
+	}
 
-    .we-do-info-title{
-        display: none;
-    }
+	.we-do-info-title {
+		display: none;
+	}
 
-    .we-do-info h2 {
-        font-size: 18px;
-        margin-bottom: 0;
-    }
+	.we-do-info h2 {
+		font-size: 18px;
+		margin-bottom: 0;
+	}
 
-    .we-do-info p {
-        font-size: 14px;
-    }
+	.we-do-info p {
+		font-size: 14px;
+	}
 }
 
 @media only screen and (max-width: 380px) {
-    .we-do-info h2 {
-        text-align: start;
-    }
+	.we-do-info h2 {
+		text-align: start;
+	}
 }
